# FXPLM

./: .gitignore  CMakeLists.txt  Java_API_notes.md  README.md
XPLM/: CommandsTxtParse.cpp  CommandsTxtParse.h  DataRefsTxtParse.cpp  DataRefsTxtParse.h  FXPLM.cpp  FXPLM.h  ObjLoader.cpp  ObjLoader.h  PluginContextGuard.h  XPLM.cpp  XPLM.h  XPLMCamera.cpp  XPLMCamera.h  XPLMDataAccess.cpp  XPLMDataAccess.h  XPLMDisplay.cpp  XPLMDisplay.h  XPLMGraphics.cpp  XPLMGraphics.h  XPLMInstance.cpp  XPLMInstance.h  XPLMMap.cpp  XPLMMap.h  XPLMMenus.cpp  XPLMMenus.h  XPLMNavigation.cpp  XPLMNavigation.h  XPLMPlanes.cpp  XPLMPlanes.h  XPLMPlugin.cpp  XPLMPlugin.h  XPLMProcessing.cpp  XPLMProcessing.h  XPLMScenery.cpp  XPLMScenery.h  XPLMUtilities.cpp  XPLMUtilities.h  defs.h  glue_AvionicsHost.cpp  glue_AvionicsHost.hpp  (+15 more)
gz_core/: CMakeLists.txt
